Feat: implementation code for highest salary and top ten highest salary names